tests/ui/consts/issue-70942-trait-vs-impl-mismatch.stderr
error[E0326]: implemented const `VALUE` has an incompatible type for trait
  --> $DIR/issue-70942-trait-vs-impl-mismatch.rs:8:18
   |
LL |     const VALUE: i32 = 0;
   |                  ^^^ expected `usize`, found `i32`
   |
note: type in trait
  --> $DIR/issue-70942-trait-vs-impl-mismatch.rs:2:18
   |
LL |     const VALUE: usize;
   |                  ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0326`.
